[package]
name = "zkp_chum_pederson"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
num-bigint = {version = "0.4", features = ["rand"]}
prost = "0.11"
rand = "0.8"
tonic = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # async rust runtime

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

